--- a/index.html
+++ b/index.html
@@ -22,49 +22,49 @@
     <!-- Menu toggle button -->
     <div class="menuToggle"><ion-icon name="add-outline"></ion-icon></div>
     <!-- Menu items with icons and colors -->
-    <li style="--i: 0; --clr: #cc00cc">
+    <li style="--i: 0; --clr: #fcfcfc">
       <a href="https://portainer.amdcloud.kz/" data-name="Portainer">
         <ion-icon name="logo-apple-ar"></ion-icon>
         <span class="tooltip left">Portainer</span>
       </a>
     </li>
-    <li style="--i: 1; --clr: #cc33cc">
+    <li style="--i: 1; --clr: #ffffff">
       <a href="https://discord.gg/Ehc3yWQ" data-name="Dominant Discord">
         <ion-icon name="logo-discord"></ion-icon>
         <span class="tooltip left">Dominant</span>
       </a>
     </li>
-    <li style="--i: 2; --clr: #cc66cc">
+    <li style="--i: 2; --clr: #f7f7f7">
       <a href="https://github.com/TeamDominant" data-name="Dominant Github">
         <ion-icon name="logo-github"></ion-icon>
         <span class="tooltip above">Github</span>
       </a>
     </li>
-    <li style="--i: 3; --clr: #cc99cc">
+    <li style="--i: 3; --clr: #f3f3f3">
       <a href="https://discord.gg/XNp27gHrJf" data-name="iC'e x TunerZ Discord">
         <ion-icon name="logo-discord"></ion-icon>
         <span class="tooltip right">iC'e x TunerZ</span>
       </a>
     </li>
-    <li style="--i: 4; --clr: #cc99ff">
+    <li style="--i: 4; --clr: #eaeaea">
       <a href="https://privatebin.amdcloud.kz/" data-name="Privatebin">
         <ion-icon name="document-lock-outline"></ion-icon>
         <span class="tooltip right">Privatebin</span>
       </a>
     </li>
-    <li style="--i: 5; --clr: #ccccff">
+    <li style="--i: 5; --clr: #f3f3f3">
       <a href="https://red.amdcloud.kz/" data-name="Red-Dashboard">
         <ion-icon name="hardware-chip-outline"></ion-icon>
         <span class="tooltip right">Red-Dashboard</span>
       </a>
     </li>
-    <li style="--i: 6; --clr: #ccffff">
+    <li style="--i: 6; --clr: #f7f7f7">
       <a href="https://amdcloud.kz/" data-name="Homepage">
         <ion-icon name="home-outline"></ion-icon>
         <span class="tooltip below">Homepage</span>
       </a>
     </li>
-    <li style="--i: 7; --clr: #eaffff">
+    <li style="--i: 7; --clr: #ffffff">
       <a href="https://next.amdcloud.kz/" data-name="Nextcloud">
         <ion-icon name="cloud-outline"></ion-icon>
         <span class="tooltip left">Nextcloud</span>
