need to fix the glitch between icon and text

--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
       </a>
     </li>
     <li>
-      <a href="https://privatebin.amdcloud.kz/" style="--clr: #eaeaea">
+      <a href="https://privatebin.amdcloud.kz/" style="--clr: #ffffff">
         <ion-icon name="document-lock-outline"></ion-icon>
         <span class="tooltip">Privatebin</span>
       </a>
     </li>
     <li>
-      <a href="https://portainer.amdcloud.kz/" style="--clr: #fcfcfc">
+      <a href="https://portainer.amdcloud.kz/" style="--clr: #ffffff">
         <ion-icon name="logo-apple-ar"></ion-icon>
         <span class="tooltip">Portainer</span>
       </a>
     </li>
     <li>
-      <a href="https://red.amdcloud.kz/" style="--clr: #f3f3f3">
+      <a href="https://red.amdcloud.kz/" style="--clr: #ffffff">
         <ion-icon name="hardware-chip-outline"></ion-icon>
         <span class="tooltip">Red-Dashboard</span>
       </a>
     </li>
     <li>
-      <a href="https://github.com/TeamDominant" style="--clr: #f7f7f7">
+      <a href="https://github.com/TeamDominant" style="--clr: #ffffff">
         <ion-icon name="logo-github"></ion-icon>
         <span class="tooltip">Github</span>
       </a>
@@ -52,13 +52,13 @@
       </a>
     </li>
     <li>
-      <a href="https://discord.gg/XNp27gHrJf" style="--clr: #f3f3f3">
+      <a href="https://discord.gg/XNp27gHrJf" style="--clr: #ffffff">
         <ion-icon name="logo-discord"></ion-icon>
         <span class="tooltip">iC'e x TunerZ</span>
       </a>
     </li>
     <li>
-      <a href="https://amdcloud.kz/" style="--clr: #f7f7f7">
+      <a href="https://amdcloud.kz/" style="--clr: #ffffff">
         <ion-icon name="home-outline"></ion-icon>
         <span class="tooltip">Homepage</span>
       </a>
